and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

11-June-2015: G.Cosmo (externals-V10-00-10)
- CLHEP: Moved static methods handling static data in G4RandGauss from inline
  to source. Addressing problem report #1754.
- Switch off warnings for deprecated calls to auto_ptr in Utility headers.

9-April-2015: G.Cosmo
- CLHEP: Fixed usage of std::abs() in RandGaussZiggurat source.

12-December-2014: G.Cosmo
- CLHEP: Fixed usage of std::abs() in RandGaussZiggurat header.
- USolids: Use canonical form for operator=() in UPolycone.

24-November-2014: G.Cosmo (externals-V10-00-08)
- Updated to CLHEP-2.2.0.4:
  o Fixed a type mismatch in Utility/memory.h,
    reported as compilation warning on Windows/VC9.
  o Use pragma in RanshiEngine.cc to ignore aggressive 32bit gcc compiler
    warnings.
  o Synchronised inlining of Hep3Vector::operator () (int i).

14-November-2014: G.Cosmo (externals-V10-00-07)
- Updated to CLHEP-2.2.0.3: moved definition of pi into SystemOfUnits.h
  so that its hard-coded value is not defined twice.

12-November-2014: G.Cosmo (externals-V10-00-06)
- Removed unused 'tpmalloc' and 'memoryprotection' modules.
- Update to CLHEP Hep3Vector to move operators 'operator()(int)' to be
  inline and removed printout to improve CPU performance.

30-October-2014: B.Morgan (externals-V10-00-05)
- Update build of USolids library to ensure it is built for
  the default global mode.

29-October-2014: G.Cosmo (externals-V10-00-04)
- Moved module from source/geometry/solids to source/externals.
  Adapted scripts for optional external USolids library build.

17-June-2014: G.Cosmo (externals-V10-00-03)
- Updated to CLHEP-2.2.0.0: fixes for compilation warnings on clang compiler