@@ -32,9 +32,11 @@
 
 // don't generate unnecessary warnings
 #if defined __GNUC__ 
-  #pragma GCC diagnostic push
-  #pragma GCC diagnostic ignored "-Wdelete-non-virtual-dtor"
-  #pragma GCC diagnostic ignored "-Wdeprecated-declarations"
+  #if __GNUC__ > 3 && __GNUC_MINOR__ > 6
+    #pragma GCC diagnostic push
+    #pragma GCC diagnostic ignored "-Wdelete-non-virtual-dtor"
+    #pragma GCC diagnostic ignored "-Wdeprecated-declarations"
+  #endif
 #endif 
 #ifdef __clang__
   #pragma clang diagnostic push
@@ -1487,7 +1489,9 @@ do_nothing_deleter::operator () ( void const * ) const
 
 
 #if defined __GNUC__ 
-  #pragma GCC diagnostic pop
+  #if __GNUC__ > 3 && __GNUC_MINOR__ > 6
+    #pragma GCC diagnostic pop
+  #endif
 #endif 
 #ifdef __clang__
   #pragma clang diagnostic pop
