@@ -17,10 +17,13 @@ committal in the CVS repository !
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
 
+15-June-2015: G.Cosmo (externals-V10-00-11)
+- CLHEP: void warnings on legacy gcc compilers.
+
 11-June-2015: G.Cosmo (externals-V10-00-10)
 - CLHEP: Moved static methods handling static data in G4RandGauss from inline
   to source. Addressing problem report #1754.
-- Switch off warnings for deprecated calls to auto_ptr in Utility headers.
+  Switch off warnings for deprecated calls to auto_ptr in Utility headers.
 
 9-April-2015: G.Cosmo
 - CLHEP: Fixed usage of std::abs() in RandGaussZiggurat source.
